# gfs

./: .gitignore  .rustfmt.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  LICENCE  LICENSE  LICENSE_SHORT  README.md  ROADMAP.md  SECURITY.md  THANK-YOU.md  install  rust-toolchain.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: FEATURE-REQUEST.yml  config.yaml
.github/workflows/: build-release.yml  main.yml  pr.yml  release.yml
crates/applications/website/: Cargo.toml  DEPLOYMENT.md  QUICKSTART.md  README.md  Trunk.toml  _headers  build.sh  cloudflare-pages.toml  index.html  install
crates/applications/website/src/: lib.rs  main.rs
crates/applications/website/src/components/: code_block.rs  code_tabs.rs  faq.rs  feature_card.rs  footer.rs  header.rs  hero.rs  mod.rs  video_showcase.rs
crates/applications/website/src/pages/: docs.rs  home.rs  mod.rs  not_found.rs
crates/applications/website/src/pages/docs/: mod.rs
crates/applications/website/src/pages/docs/commands/: providers.rs
crates/applications/website/style/: main.css
crates/config/: Cargo.toml
crates/domain/: Cargo.toml
crates/telemetry/: Cargo.toml
crates/telemetry/src/: lib.rs
docs/: architecture-audit-2026-02-25.md  integration-tests.md  opensource-readiness-report-2026-02-25.md
docs/rfcs/: 000-motivation.md  001-gfs-disk-layout.md  005-mcp.md  007-merge.md  (+3 more)
integration_tests/: Cargo.toml
integration_tests/tests/: e2e_checkout.rs  e2e_checkout_postgres.rs  e2e_commit.rs  integration_test.rs  mcp_stdio.rs
(+110 files in other folders)
