[package]
name = "integration_tests"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
gfs-domain = { workspace = true }
once_cell                = "1.21"
serde_json               = { workspace = true }
serial_test               = "3"
tempfile                 = { workspace = true }

