[package]
name             = "gfs-telemetry"
version.workspace     = true
edition.workspace     = true
authors.workspace     = true
license.workspace     = true
repository.workspace  = true
rust-version.workspace = true

[dependencies]
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
