[package]
name = "gfs-website"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "GFS documentation website"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "gfs-website"
path = "src/main.rs"

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
leptos_meta = { version = "0.6", features = ["csr"] }
leptos_router = { version = "0.6", features = ["csr"] }
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
serde = { workspace = true }
serde_json = { workspace = true }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
